--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ sidebar:
     url: /
   - title: Discord Server
     children:
-      - title: "Invite"
+      - title: "Join"
         url: https://discord.gg/ZPErMGW
       - title: "Code of conduct"
         url: /code-of-conduct/
