--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "#include &lt;C++>"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "IncludeCpp"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "Inclusive, diverse community for developers interested in C++"
+url                      : "http://includecpp.org" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -84,7 +84,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : include_cpp
 facebook:
   username               :
   app_id                 :
@@ -109,8 +109,8 @@ analytics:
 author:
   name             : "IncludeCpp"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              :
+  location         :
   email            :
   links:
     - label: "Email"
