--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,7 @@ exclude:
   - package.json
   - Rakefile
   - README
+  - template-page.md
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
