Rename "Join" to "Join Discord" in menu
to see if it improves usability, following feedback in Discord that "Join" was a little hard to find...

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ sidebar:
     url: /
   - title: Discord Server
     children:
-      - title: "Join"
+      - title: "Join Discord"
         url: https://discord.gg/ZPErMGW
       - title: "Code of conduct"
         url: /code-of-conduct/
