Add "What can I do" page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
 sidebar:
   - title: Home
     url: /
+    children:
+      - title: "What can I do?"
+        url: /what-can-i-do/
   - title: Discord Server
     children:
       - title: "Join Discord"
