--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -47,3 +47,13 @@ sidebar:
         url: https://shop.spreadshirt.net/includecpp
   - title: "Resources"
     url: /resources/
+    children:
+      - title: Conference Resources
+        url: /resources/conference-resources/
+      - title: Equality and Diversity
+        url: /resources/equality_and_diversity/
+      - title: Other Organisations
+        url: /resources/other_organisations/
+      - title: Recruitment
+        url: /resources/recruitment/
+
