Change GitHub link in title to go to Discord page (#30)
Co-Authored-By: Kate Gregory <kategregory@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Twitter"
     url: https://twitter.com/include_cpp
-  - title: "GitHub"
-    url: https://github.com/include-cpp
+  - title: "Discord"
+    url: /discord/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
