Toolbox link now goes to a page with explanatory text
Co-Authored-By: Kate Gregory <kategregory@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ sidebar:
       - title: "Organising"
         url: /conferences/organising-conferences/
       - title: "Toolbox"
-        url: https://github.com/include-cpp/toolboxes/releases/latest
+        url: https://github.com/include-cpp/toolboxes/blob/master/README.md
   - title: "Shop"
     url: /shop/
     children:
