--- a/mlc_config.json
+++ b/mlc_config.json
@@ -2,21 +2,12 @@
   "ignorePatterns": [
     {
       "pattern": "^https://github.com/SimonCropp/MarkdownSnippets"
-    },
-    {
-      "pattern": "^https://conan.io/"
-    },
-    {
-      "pattern": "^/doc/README.md"
-    },
-    {
-      "pattern": "^https://github.com/approvals/ApprovalTests.cpp/actions"
     }
   ],
   "replacementPatterns": [
     {
       "pattern": "^/",
-      "replacement": "https://github.com/approvals/ApprovalTests.cpp/blob/master/"
+      "replacement": "https://www.includecpp.org/"
     }
     ]
 }
