Fix link-checking for links containing {{site.baseurl}} (#28)

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -8,6 +8,10 @@
     {
       "pattern": "^/",
       "replacement": "https://www.includecpp.org/"
+    },
+    {
+      "pattern": "^{{site.baseurl}}",
+      "replacement": "https://www.includecpp.org"
     }
-    ]
+  ]
 }
