Don't rebuild site if link-checker script or config changes

--- a/_config.yml
+++ b/_config.yml
@@ -179,10 +179,12 @@ exclude:
   - gulpfile.js
   - LICENSE
   - log
+  - mlc_config.json
   - node_modules
   - package.json
   - Rakefile
   - README
+  - scripts/
   - template-page.md
   - tmp
   - /docs # ignore Minimal Mistakes /docs
