Add new articles section in resources
Co-Authored-By: Kate Gregory <kategregory@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,4 +57,6 @@ sidebar:
         url: /resources/domains/
       - title: References
         url: /resources/references/
+      - title: Articles
+        url: /resources/articles/
 
