'Join Discord' in nav bar goes to Discord page
Co-Authored-By: Victor Moreno <37329083+penguinlemma@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ sidebar:
     url: /discord/
     children:
       - title: "Join Discord"
-        url: https://discord.gg/ZPErMGW
+        url: /discord/
       - title: "Code of conduct"
         url: /code-of-conduct/
       - title: "Moderation"
