Rename Language to "Language & Communication"
Co-Authored-By: Kate Gregory <kategregory@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -49,7 +49,7 @@ sidebar:
   - title: "Resources"
     url: /resources/
     children:
-      - title: Language
+      - title: Language & Communication
         url: /resources/language/
 #      - title: Discriminations
 #        url: /resources/discriminations/
