Start a community sponsors page
Co-Authored-By: Kate Gregory <kategregory@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,8 @@ sidebar:
     children:
       - title: "What can I do?"
         url: /what-can-i-do/
+      - title: "Community sponsors"
+        url: /community-sponsors/
   - title: Discord Server
     url: /discord/
     children:
