Add markdown-link-check config
* Fix cron schedule
* Increase timeout for slow loading sites
* Consider status 400 as alive to ignore links relative to the published
  site

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,7 +6,7 @@ on:
     - master
   schedule:
   # runs every monday at 9 am
-  - cron: "0 9 * * *"
+  - cron: "0 9 * * 1"
 
 jobs:
   markdown-link-check:
@@ -17,3 +17,4 @@ jobs:
       with:
         use-quiet-mode: 'yes'
         use-verbose-mode: 'yes'
+        config-file: '.github/workflows/mlc_config.json'
