--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -1,4 +1,15 @@
 {
+  "ignorePatterns": [
+    {
+      "pattern": "^https://support.discord.com/hc/en-us/"
+    },
+    {
+      "pattern": "^conferences/"
+    },
+    {
+      "pattern": "^jobs/"
+    }
+  ],
   "replacementPatterns": [
     {
       "pattern": "^/",
@@ -9,6 +20,5 @@
       "replacement": "https://www.includecpp.org/"
     }
   ],
-  "timeout": "20s",
-  "aliveStatusCodes": [200, 400]
+  "timeout": "20s"
 }
