Remove double slash in url

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -17,7 +17,7 @@
     },
     {
       "pattern": "^{{site.baseurl}}",
-      "replacement": "https://www.includecpp.org/"
+      "replacement": "https://www.includecpp.org"
     }
   ],
   "timeout": "20s"
