--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v2
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
-        use-quiet-mode: 'yes'
+        use-quiet-mode: 'no'
         use-verbose-mode: 'yes'
         config-file: '.github/workflows/mlc_config.json'
