Add the techrepublic.com link to the ignore patterns
This is because it always appears to fail, but seems to be fine when followed manually

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -8,6 +8,9 @@
     },
     {
       "pattern": "^jobs/"
+    },
+    {
+      "pattern": "^https://www.techrepublic.com/article/it-gender-gap-where-are-the-female-programmers/"
     }
   ],
   "replacementPatterns": [
