--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,9 +22,9 @@ sidebar:
       - title: "Community sponsors"
         url: /community-sponsors/
   - title: "Code of Conduct"
-    url: /discord/
+    url: /code-of-conduct/
     children:
-      - title: "Our Code of conduct"
+      - title: "Our Code of Conduct"
         url: /code-of-conduct/
       - title: "Transparency reports"
         url: /reports/
